Fixed height: fit-content bug causing image distortion in Safari

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -163,10 +163,6 @@ This is the 'home' page in the Starter theme.
         
     }
 
-    .gh-card-image {
-        /* max-height: 20vmin; */
-        height: fit-content;
-    }
 
     .gh-card-meta {
         margin: 0 0 var(--space-m);
